--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 # Project information
-site_name: Digital Developer Conference 2021 - Jumpstart your Journey to AI and Data Science
-site_url: https://ibm.github.io/ddc-2021-jumpstart-your-journey
+site_name: Introduction to AI and Data Science
+site_url: https://ibm.github.io/workshop-python-datascience-2021
 site_author: IBM Developer
 
 # Repository
-repo_name: ddc-2021-jumpstart-your-journey
-repo_url: https://github.com/ibm/ddc-2021-jumpstart-your-journey
+repo_name: workshop-python-datascience-2021
+repo_url: https://github.com/ibm/workshop-python-datascience-2021 
 edit_uri: edit/master/workshop
 docs_dir: workshop
 
@@ -19,11 +19,9 @@ nav:
     - Using Pandas for data science: data-exploration-pandas/README.md
     - Using Python and Jupyter to Visualize data: data-visualization/README.md
     - Machine Learning with Scikit Learn: machine-learning-sklearn/README.md
-    - Build and Deploy Custom AI Predictive Models Part 1 - Intro & Building: autoai-build/README.md 
-    - Build and Deploy Custom AI Predictive Models Part 2 - Deploying & Analyzing: autoai-deploy/README.md
-    - Build and Deploy Custom AI Predictive Models Part 3 - Creating a notebook: autoai-notebook/notebook.md
-  - Badge:
-    - How to claim your badge: claim-your-badge/README.md
+    - Optional: Build and Deploy Custom AI Predictive Models Part 1 - Intro & Building: autoai-build/README.md 
+    - Optional: Build and Deploy Custom AI Predictive Models Part 2 - Deploying & Analyzing: autoai-deploy/README.md
+    - Optional: Build and Deploy Custom AI Predictive Models Part 3 - Creating a notebook: autoai-notebook/notebook.md
   - Workshop Resources:
       - IBM Developer: https://developer.ibm.com
 
